# airflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  webserver_config.py
dags/: .airflowignore  dag_dbt_docs_gerenator.py  dag_dolar_models.py  dag_get_ip.py  dag_ingestion_data.py  dag_pokedex_models.py
dags/cosmos/: README.md  dbt_project.yml  packages.yml  profiles.yml
dags/cosmos/macros/: drop_table.sql  drop_table.yml  extract_date_parts.sql  extract_date_parts.yml
dags/cosmos/models/: groups.yml
dags/cosmos/models/gold/dolar/: obt_divergence.sql  obt_divergence.yml  obt_monthly_avg.sql  obt_monthly_avg.yml  obt_monthly_ibov_dolar_correlation.sql  obt_monthly_ibov_dolar_correlation.yml  obt_monthly_volatility.sql  obt_monthly_volatility.yml  obt_oscillations.sql  obt_oscillations.yml  obt_year_corr.sql  obt_year_corr.yml  test_dolar.sql
dags/cosmos/models/gold/pokedex/: obt_pm_types.sql
dags/cosmos/models/ods/: time.sql  time.yml
dags/cosmos/models/sources/: source.yaml
dags/cosmos/models/trusted/dolar/: tb_dolar_ibov.sql  tb_dolar_ibov.yml
dags/cosmos/models/trusted/pokedex/: tb_moves_types.sql  tb_moves_types.yaml  (+2 more)
dags/modules/: check_soda.py  dbt_config.py  test_python_call.py
dags/soda/: configuration.yaml
dags/soda/check/sources/: raw_pokemons.yaml  raw_pokemons_types.yaml  raw_teste.yaml
includes/dynamic_generator/: README.md  generate_dag.py  process_file.jinja2
includes/dynamic_generator/configs/: multi_task.yaml  simple_task.yaml
tests/: test_dag.py  test_yaml.py
